--- a/Assignment2_BIT216/package.json
+++ b/Assignment2_BIT216/package.json
@@ -22,13 +22,16 @@
     "@angular/platform-browser": "^10.1.6",
     "@angular/platform-browser-dynamic": "^10.1.6",
     "@angular/router": "^10.1.6",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.13",
     "ng-simple-slideshow": "^1.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "^10.1.7",
     "@angular/compiler-cli": "^10.1.6",
     "@types/jasmine": "~3.5.0",
